package entrega2_poo;

public interface Desenho {
    String desenhar();
    
} 
